--- a/animal_rescue.html
+++ b/animal_rescue.html
@@ -10,8 +10,9 @@
 	<div class="container">
 		{{> header}}
 		<div id="content" class="main">
-			the main section of the page will go here
 			<!-- {{> yield}} -->
+			{{> animalList}}
+<!-- 			{{> addAnimalInput}} -->
 		</div>
 		{{> footer}}
 	</div>
@@ -30,13 +31,13 @@
 	    </div>
 	    <div class="navbar-collapse collapse">
 	        <ul class="nav navbar-nav">
-	            <li class="active"><a href="#">Got links?</a></li>
+	            <li class="active"><a href="#">Human Seeking Animal</a></li>
 	        </ul>
 	        <ul class="nav navbar-nav">
-	            <li><a href="#">or other stuff?</a></li>
+	            <li><a href="#">Animal Seeking Human</a></li>
 	        </ul>
 	        <ul class="nav navbar-nav navbar-right">
-	            {{> loginButtons}} <!-- here -->
+	            {{> loginButtons}}
 	        </ul>
 	    </div>
 	</div>
@@ -47,4 +48,114 @@
 
 <template name="footer">
 	Hey, what footer text do we want to put in?
+</template>
+
+
+<template name="addAnimalInput">
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="name">Name: </label>
+           <div class="col-sm-10">
+                <input name="name" type="text" value="" placeholder="Please enter name of your pet" />
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="type">Type: </label>
+			<div class="col-sm-10">
+                <input type="radio" name="type" value="cat">Cat
+                <input type="radio" name="type" value="dog">Dog
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="sex">Sex: </label>
+           <div class="col-sm-10">
+                <select name="type">
+                	<option disabled selected> -- please select-- </option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="age">Age: </label>
+           <div class="col-sm-10">
+                <select name="type">
+                	<option disabled selected> -- please select-- </option>
+                    <option value="<6 months">&lt;6 months</option>
+                    <option value="6 months - 1year">6months - 1year</option>
+                    <option value="1 - 3 years">1 - 3 years</option>
+                    <option value="3 - 5 years">3 - 5 years</option>
+                    <option value=">10 years">&gt; 10years</option>
+                </select>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="size">Size: </label>
+           <div class="col-sm-10">
+                <select name="size">
+                	<option disabled selected> -- please select-- </option>
+                    <option value="very small (<10lbs)">Very Small (&lt;10lbs)</option>
+                    <option value="small (10-25 lbs)">Small (10-25 lbs)</option>
+                    <option value="medium (25-40 lbs)">Medium (25-40 lbs)</option>
+                    <option value="large (40-70 lbs)">Large (40-70 lbs)</option>
+                    <option value="very large (>70 lbs)">Very Large (&gt;70 lbs)</option>
+                </select>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="breed">Breed: </label>
+           <div class="col-sm-10">
+                <input name="breed" type="text" value="" placeholder="Please enter breed of your pet" />
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="color">Color: </label>
+           <div class="col-sm-10">
+                <input name="color" type="text" value="" placeholder="Please enter color of your pet" />
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="personality">Personality: </label>
+           <div class="col-sm-10">
+                <select name="personality">
+                	<option disabled selected> -- please select-- </option>
+                    <option value="outgoing/friendly">Outgoing/Friendly</option>
+                    <option value="shy">Shy</option>
+                    <option value="sometimes shy/sometimes friendly">Sometime Shy/Sometimes Friendly</option>
+                    <option value="don't know">Don't Know</option>
+                </select>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="health_issues">Health Issues: </label>
+           <div class="col-sm-10">
+                <select name="health_issues">
+                	<option disabled selected> -- please select-- </option>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                    <option value="don't know">Don't Know</option>
+                </select>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="comments">	Comments:
+            </label>
+           <div class="col-sm-10">
+                <textarea name="comments" value="" placeholder="Introduction, Likes, Special Needs (in case of health issues etc.)" ></textarea>
+           </div>
+        </div>
+  		<div class="form-group">
+        	<label class="col-sm-2 control-label" for="img_path">Add Image: </label>
+           <div class="col-sm-10">
+        	<input type="text" rows="4" cols="50" value="img_path" />
+           </div>
+        </div>
+        <div class="form-group">
+        	<div class="col-sm-2"></div>
+            <div class="col-sm-10">
+                <input type="submit" value="Submit" class="btn btn-primary" />
+           	</div>
+          
+        </div>
+    </form>
 </template>
