--- a/client/animal_create.html
+++ b/client/animal_create.html
@@ -1,62 +1,9 @@
-<head>
-  <title>animal_rescue</title>
-</head>
-
-<body>
-  {{> layout}}
-</body>
-
-<template name="layout">
-	<div class="container">
-		{{> header}}
-		<div id="content" class="main">
-			{{> yield}}
-<!-- 			{{> animalList}}
-			{{> addAnimalInput}}
- -->		</div>
-		{{> footer}}
-	</div>
-</template>
-
-<template name="header">
-	<div class="navbar navbar-default" role="navigation">
-	    <div class="navbar-header">
-	        <a class="navbar-brand" href="/">animal rescue</a>
-	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	        </button>
-	    </div>
-	    <div class="navbar-collapse collapse">
-	        <ul class="nav navbar-nav">
-	            <li class="active"><a href="/">Human Seeking Animal</a></li>
-	        </ul>
-	        <ul class="nav navbar-nav">
-	            <li><a href="/new_animal">Animal Seeking Human</a></li>
-	        </ul>
-	        <ul class="nav navbar-nav navbar-right">
-	            {{> loginButtons}}
-	        </ul>
-	    </div>
-	</div>
-</template>
-
-<template name="main">
-</template>
-
-<template name="footer">
-	Hey, what footer text do we want to put in?
-</template>
-
-
-<template name="addAnimal">
+<template name="animalCreate">
     <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label" for="name">Name: </label>
            <div class="col-sm-10">
-                <input name="name" type="text" value="" placeholder="Please enter name of your pet" />
+                <input name="name" type="text" value=""  />
            </div>
         </div>
         <div class="form-group">
@@ -105,13 +52,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="breed">Breed: </label>
            <div class="col-sm-10">
-                <input name="breed" type="text" value="" placeholder="Please enter breed of your pet" />
+                <input name="breed" type="text" value=""  />
            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label" for="color">Color: </label>
            <div class="col-sm-10">
-                <input name="color" type="text" value="" placeholder="Please enter color of your pet" />
+                <input name="color" type="text" value=""  />
            </div>
         </div>
         <div class="form-group">
@@ -141,13 +88,13 @@
             <label class="col-sm-2 control-label" for="comments">	Comments:
             </label>
            <div class="col-sm-10">
-                <textarea name="comments" value="" placeholder="Introduction, Likes, Special Needs (in case of health issues etc.)" ></textarea>
+                <textarea name="comments" rows="4" cols="50" value="" placeholder="Introduction, Likes, Special Needs (in case of health issues etc.)" ></textarea>
            </div>
         </div>
   		<div class="form-group">
         	<label class="col-sm-2 control-label" for="img_path">Add Image: </label>
            <div class="col-sm-10">
-        	<input type="text" rows="4" cols="50" value="img_path" />
+        	<input type="text" name="img_path" />
            </div>
         </div>
         <div class="form-group">
