--- a/client/animal_create.html
+++ b/client/animal_create.html
@@ -9,14 +9,20 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="type">Type: </label>
 			<div class="col-sm-10">
-                <input type="radio" name="type" value="cat">Cat
-                <input type="radio" name="type" value="dog">Dog
+            <input type="radio" name="type" value="cat">
+            <label class="radio_spacing">
+                Cat
+            </label>
+            <input type="radio" name="type" value="dog">
+            <label class="radio_spacing">
+                Dog
+            </label>
            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label" for="sex">Sex: </label>
            <div class="col-sm-10">
-                <select name="type">
+                <select name="size">
                 	<option disabled selected> -- please select-- </option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
@@ -26,13 +32,14 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" for="age">Age: </label>
            <div class="col-sm-10">
-                <select name="type">
+                <select name="age">
                 	<option disabled selected> -- please select-- </option>
                     <option value="<6 months">&lt;6 months</option>
                     <option value="6 months - 1year">6months - 1year</option>
                     <option value="1 - 3 years">1 - 3 years</option>
                     <option value="3 - 5 years">3 - 5 years</option>
-                    <option value=">10 years">&gt; 10years</option>
+                    <option value="5 - 10 years">5 - 10 years</option>
+                    <option value=">10 years">&gt; 10 years</option>
                 </select>
            </div>
         </div>
