--- a/client/animal_list.html
+++ b/client/animal_list.html
@@ -8,16 +8,22 @@
 <template name="filterAnimals">
 	<form class="form-horizontal">
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="type">Type :</label>
-			<div class="col-sm-9 radio_spacing">
-			    <input type="radio" name="type" value="cat">Cat
-			    <input type="radio" name="type" value="dog">Dog
+			<label class="col-sm-3 control-label" for="type">Type:</label>
+			<div class="col-sm-9">
+			    <input type="radio" name="type" value="cat">
+				<label class="radio_spacing">
+			    	Cat
+				</label>
+			    <input type="radio" name="type" value="dog">
+				<label class="radio_spacing">
+			    	Dog
+			    </label>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="age">Age :</label>
-			<div class="col-sm-9 radio">
+			<label class="col-sm-3 control-label" for="age">Age:</label>
+			<div class="col-sm-9">
 				<label class="checkbox-inline">
 					<input type="checkbox" name="" value="<6 months">&lt;6 months</label>
 				<label class="checkbox-inline">
@@ -28,15 +34,14 @@
 				<label class="checkbox-inline">
 					<input type="checkbox" value="3-5 years">3-5 years</label>
 				<label class="checkbox-inline">
-	  				<input type="checkbox" value=">10 years">&gt;10 years</label>
+	  				<input type="checkbox" value="5-10 years">5-10 years</label>
 				<label class="checkbox-inline">
-	  				<input type="checkbox" value="don't care">Don't Care
-	  			</label>
+	  				<input type="checkbox" value=">10 years">&gt;10 years</label>
 			</div>
 
 		</div>
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="size">Size :</label>
+			<label class="col-sm-3 control-label" for="size">Size:</label>
 			<div class="col-sm-9">
 				<label class="checkbox-inline">
 					<input type="checkbox" name="" value="very small (<10lbs)">Very Small (&lt;10lbs)
@@ -53,16 +58,22 @@
 				<label class="checkbox-inline">
 		  			<input type="checkbox" value="very large (>70 lbs)">Very Large (&gt;70 lbs)
 		  		</label>
-				<label class="checkbox-inline">
-		  			<input type="checkbox" value="don't care">Don't Care
-		  		</label>           
 			</div>
 		</div>        
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="health_issues">Are you willing to look into Special Needs of the animal :</label>
+			<label class="col-sm-3 control-label" for="health_issues">Are you willing to look into Special Needs of the animal:</label>
 			<div class="col-sm-9 radio_spacing">
-			    <input type="radio" name="type" value="yes">Yes
-			    <input type="radio" name="type" value="no">No
+
+			    <input type="radio" name="type" value="yes">
+				<label class="radio_spacing">
+			    	Yes
+			    </label>
+
+			    <input type="radio" name="type" value="no">
+				<label class="radio_spacing">
+			    	No
+			    </label>
+
 			</div>
 		</div>
 	</form>
