added filter to animalList; correction of some layout stuff

--- a/client/animal_list.html
+++ b/client/animal_list.html
@@ -24,52 +24,52 @@
 		<div class="form-group">
 			<label class="col-sm-3 control-label" for="age">Age:</label>
 			<div class="col-sm-9">
-				<label class="checkbox-inline">
-					<input type="checkbox" name="" value="<6 months">&lt;6 months</label>
-				<label class="checkbox-inline">
-					<input type="checkbox" name="" value="6 months - 1 year">6 months - 1 year
+				<label class="radio_spacing">
+					<input type="radio" name="age" value="<6 months">&lt;6 months</label>
+				<label class="radio_spacing">
+					<input type="radio" name="age" value="6 months - 1 year">6 months - 1 year
 				</label>
-				<label class="checkbox-inline">
-					<input type="checkbox" value="1-3 years">1-3 years</label>
-				<label class="checkbox-inline">
-					<input type="checkbox" value="3-5 years">3-5 years</label>
-				<label class="checkbox-inline">
-	  				<input type="checkbox" value="5-10 years">5-10 years</label>
-				<label class="checkbox-inline">
-	  				<input type="checkbox" value=">10 years">&gt;10 years</label>
+				<label class="radio_spacing">
+					<input type="radio" name="age" value="1-3 years">1-3 years</label>
+				<label class="radio_spacing">
+					<input type="radio" name="age" value="3-5 years">3-5 years</label>
+				<label class="radio_spacing">
+	  				<input type="radio" name="age" value="5-10 years">5-10 years</label>
+				<label class="radio_spacing">
+	  				<input type="radio" name="age" value=">10 years">&gt;10 years</label>
 			</div>
 
 		</div>
 		<div class="form-group">
 			<label class="col-sm-3 control-label" for="size">Size:</label>
 			<div class="col-sm-9">
-				<label class="checkbox-inline">
-					<input type="checkbox" name="" value="very small (<10lbs)">Very Small (&lt;10lbs)
+				<label class="radio_spacing">
+					<input type="radio" name="size" value="very small (<10lbs)">Very Small (&lt;10lbs)
 				</label>
-				<label class="checkbox-inline">
-					<input type="checkbox" name="" value="small (10-25 lbs)">Small (10-25 lbs)
+				<label class="radio_spacing">
+					<input type="radio" name="size" value="small (10-25 lbs)">Small (10-25 lbs)
 				</label>
-				<label class="checkbox-inline">
-					<input type="checkbox" value="medium (25-40 lbs)">Medium (25-40 lbs)
+				<label class="radio_spacing">
+					<input type="radio" name="size" value="medium (25-40 lbs)">Medium (25-40 lbs)
 				</label>
-				<label class="checkbox-inline">
-					 <input type="checkbox" value="large (40-70 lbs)">Large (40-70 lbs)
+				<label class="radio_spacing">
+					 <input type="radio" name="size" value="large (40-70 lbs)">Large (40-70 lbs)
 				</label>
-				<label class="checkbox-inline">
-		  			<input type="checkbox" value="very large (>70 lbs)">Very Large (&gt;70 lbs)
+				<label class="radio_spacing">
+		  			<input type="radio" name="size" value="very large (>70 lbs)">Very Large (&gt;70 lbs)
 		  		</label>
 			</div>
 		</div>        
 		<div class="form-group">
 			<label class="col-sm-3 control-label" for="health_issues">Are you willing to look into Special Needs of the animal:</label>
-			<div class="col-sm-9 radio_spacing">
+			<div class="col-sm-9">
 
-			    <input type="radio" name="type" value="yes">
+			    <input type="radio" name="health_issues" value="yes">
 				<label class="radio_spacing">
 			    	Yes
 			    </label>
 
-			    <input type="radio" name="type" value="no">
+			    <input type="radio" name="health_issues" value="no">
 				<label class="radio_spacing">
 			    	No
 			    </label>
@@ -100,4 +100,4 @@
 			</div>
 		</p>
 	</div>
-</template>	
+</template>
