last update or two to fixtures

--- a/animal_rescue.html
+++ b/animal_rescue.html
@@ -27,7 +27,7 @@
 	    </div>
 	    <div class="navbar-collapse collapse">
 	        <ul class="nav navbar-nav">
-	            <li class="active"><a href="/">Human Seeking Animal</a></li>
+	            <li><a href="/">Human Seeking Animal</a></li>
 	        </ul>
 	        <ul class="nav navbar-nav">
 	            <li><a href="/new_animal">Animal Seeking Human</a></li>
